# snf-pce-dosage

./: 05_oversampled_hybrid_RECOMMENDED (2).csv  PCE.xlsx  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SNF VALUES.xlsx  ann_sname_analysis.py  compare_gb_ann.py  label_encoder.pkl  optimal_dosage_predictor.pkl  predict_dosage.py  process_data.py  processed_flow_data.csv  pyproject.toml  requirements.txt  run_predictor.py  saturation_points.csv  scaler.pkl  streamlit_app.py  test_model_original_data.py  train_model.py
