[project]
name = "files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.2.0",
    "matplotlib>=3.6.0",
    "numpy>=1.23.0",
    "openpyxl>=3.0.0",
    "pandas>=1.5.0",
    "plotly>=5.14.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.9.0",
    "seaborn>=0.12.0",
    "streamlit>=1.25.0",
]
